# Codex-Wokwi-para-simular-practicas-Raspberry-PicoW

./: CMakeLists.txt  README.md
docs/: architecture.md  wiring.md
